Metamorphosys/src/main/antlr4/phisco/streams/polimi/it/antlr4/.antlr/RSPQLParser.java
// Generated from /home/phisco/thesis/thesis/Metamorphosys/src/main/antlr4/phisco/streams/polimi/it/antlr4/RSPQL.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RSPQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, T__82=83, T__83=84, T__84=85, T__85=86, T__86=87, 
		T__87=88, T__88=89, T__89=90, T__90=91, T__91=92, T__92=93, T__93=94, 
		T__94=95, T__95=96, T__96=97, T__97=98, T__98=99, T__99=100, T__100=101, 
		T__101=102, T__102=103, T__103=104, T__104=105, T__105=106, T__106=107, 
		T__107=108, T__108=109, T__109=110, NOT=111, DISTINCT=112, REDUCED=113, 
		BOOL=114, STAR=115, UNDEF=116, TYPE=117, COMMENT=118, DURATION=119, IRIREF=120, 
		PNAME_NS=121, PNAME_LN=122, BLANK_NODE_LABEL=123, VAR=124, LANGTAG=125, 
		INTEGER=126, DECIMAL=127, DOUBLE=128, INTEGER_POSITIVE=129, DECIMAL_POSITIVE=130, 
		DOUBLE_POSITIVE=131, INTEGER_NEGATIVE=132, DECIMAL_NEGATIVE=133, DOUBLE_NEGATIVE=134, 
		EXPONENT=135, STRING_LITERAL1=136, STRING_LITERAL2=137, STRING_LITERAL_LONG1=138, 
		STRING_LITERAL_LONG2=139, BINARY_OPERATOR=140, ECHAR=141, NIL=142, WS=143, 
		ANON=144, PN_CHARS_BASE=145, PN_CHARS_U=146, VARNAME=147, PN_CHARS=148, 
		PN_PREFIX=149, PN_LOCAL=150, PLX=151, PERCENT=152, HEX=153, PN_LOCAL_ESC=154, 
		ANYCHAR=155;
	public static final int
		RULE_queryUnit = 0, RULE_query = 1, RULE_prologue = 2, RULE_baseDecl = 3, 
		RULE_prefixDecl = 4, RULE_registerClause = 5, RULE_selectQuery = 6, RULE_selectClause = 7, 
		RULE_selectModifier = 8, RULE_resultVar = 9, RULE_constructQuery = 10, 
		RULE_describeQuery = 11, RULE_askQuery = 12, RULE_datasetClause = 13, 
		RULE_namedGraphClause = 14, RULE_namedWindowClause = 15, RULE_windowDefinition = 16, 
		RULE_physicalWindow = 17, RULE_physicalRange = 18, RULE_physicalStep = 19, 
		RULE_logicalWindow = 20, RULE_logicalRange = 21, RULE_logicalStep = 22, 
		RULE_whereClause = 23, RULE_duration = 24, RULE_solutionModifier = 25, 
		RULE_groupClause = 26, RULE_groupCondition = 27, RULE_havingClause = 28, 
		RULE_havingCondition = 29, RULE_orderClause = 30, RULE_orderCondition = 31, 
		RULE_limitOffsetClauses = 32, RULE_limitClause = 33, RULE_offsetClause = 34, 
		RULE_groupGraphPattern = 35, RULE_graphPatternSub = 36, RULE_triplesSameSubject = 37, 
		RULE_propertyListNotEmpty = 38, RULE_property = 39, RULE_verb = 40, RULE_objectList = 41, 
		RULE_object = 42, RULE_varOrTerm = 43, RULE_blankNodePropertyList = 44, 
		RULE_graphPatternNotTriples = 45, RULE_groupOrUnionGraphPattern = 46, 
		RULE_optionalGraphPattern = 47, RULE_minusGraphPattern = 48, RULE_graphGraphPattern = 49, 
		RULE_windowGraphPattern = 50, RULE_filter = 51, RULE_bindPattern = 52, 
		RULE_varOrIri = 53, RULE_graphTerm = 54, RULE_expression = 55, RULE_conditionalAndExpression = 56, 
		RULE_valueLogical = 57, RULE_relationalExpression = 58, RULE_expressionList = 59, 
		RULE_numericExpression = 60, RULE_multiplicativeExpression = 61, RULE_unaryExpression = 62, 
		RULE_primaryExpression = 63, RULE_brackettedExpression = 64, RULE_builtInCall = 65, 
		RULE_rdfliteral = 66, RULE_numericLiteral = 67, RULE_numericLiteralUnsigned = 68, 
		RULE_numericLiteralPositive = 69, RULE_numericLiteralNegative = 70, RULE_argList = 71, 
		RULE_constraint = 72, RULE_aggregate = 73, RULE_unaryBuiltin = 74, RULE_binaryBuiltin = 75, 
		RULE_ternaryBuiltin = 76, RULE_ternaryOrBinaryBuiltin = 77, RULE_strReplaceExpression = 78, 
		RULE_boundExpression = 79, RULE_existsFunc = 80, RULE_string = 81, RULE_iri = 82, 
		RULE_prefixedName = 83, RULE_blankNode = 84;
	public static final String[] ruleNames = {
		"queryUnit", "query", "prologue", "baseDecl", "prefixDecl", "registerClause", 
		"selectQuery", "selectClause", "selectModifier", "resultVar", "constructQuery", 
		"describeQuery", "askQuery", "datasetClause", "namedGraphClause", "namedWindowClause", 
		"windowDefinition", "physicalWindow", "physicalRange", "physicalStep", 
		"logicalWindow", "logicalRange", "logicalStep", "whereClause", "duration", 
		"solutionModifier", "groupClause", "groupCondition", "havingClause", "havingCondition", 
		"orderClause", "orderCondition", "limitOffsetClauses", "limitClause", 
		"offsetClause", "groupGraphPattern", "graphPatternSub", "triplesSameSubject", 
		"propertyListNotEmpty", "property", "verb", "objectList", "object", "varOrTerm", 
		"blankNodePropertyList", "graphPatternNotTriples", "groupOrUnionGraphPattern", 
		"optionalGraphPattern", "minusGraphPattern", "graphGraphPattern", "windowGraphPattern", 
		"filter", "bindPattern", "varOrIri", "graphTerm", "expression", "conditionalAndExpression", 
		"valueLogical", "relationalExpression", "expressionList", "numericExpression", 
		"multiplicativeExpression", "unaryExpression", "primaryExpression", "brackettedExpression", 
		"builtInCall", "rdfliteral", "numericLiteral", "numericLiteralUnsigned", 
		"numericLiteralPositive", "numericLiteralNegative", "argList", "constraint", 
		"aggregate", "unaryBuiltin", "binaryBuiltin", "ternaryBuiltin", "ternaryOrBinaryBuiltin", 
		"strReplaceExpression", "boundExpression", "existsFunc", "string", "iri", 
		"prefixedName", "blankNode"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'BASE'", "'PREFIX'", "'REGISTER'", "'ISTREAM'", "'RSTREAM'", "'DSTREAM'", 
		"'AS'", "'SELECT'", "'('", "')'", "'CONSTRUCT'", "'{'", "'.'", "'}'", 
		"'DESCRIBE'", "'ASK'", "'FROM'", "'NAMED'", "'WINDOW'", "'ON'", "'['", 
		"']'", "'ELEMENTS'", "'STEP'", "'RANGE'", "'WHERE'", "'GROUP'", "'BY'", 
		"'HAVING'", "'ORDER'", "'ASC'", "'DESC'", "'LIMIT'", "'OFFSET'", "';'", 
		"','", "'UNION'", "'OPTIONAL'", "'MINUS'", "'GRAPH'", "'FILTER'", "'BIND'", 
		"'||'", "'&&'", "'IN'", "'+'", "'-'", "'/'", "'!'", "'^^'", "'COUNT'", 
		"'SUM'", "'MIN'", "'MAX'", "'AVG'", "'SAMPLE'", "'GROUP_CONCAT'", "'SEPARATOR'", 
		"'='", "'STR'", "'LANG'", "'DATATYPE'", "'IRI'", "'URI'", "'ABS'", "'CEIL'", 
		"'FLOOR'", "'ROUND'", "'UCASE'", "'LCASE'", "'YEAR'", "'MONTH'", "'DAY'", 
		"'HOURS'", "'MINUTES'", "'SECONDS'", "'TIMEZONE'", "'TZ'", "'MD5'", "'SHA1'", 
		"'SHA256'", "'SHA384'", "'SHA512'", "'ISIRI'", "'ISURI'", "'ISBLANK'", 
		"'ISLITERAL'", "'ISNUMERIC'", "'STRLEN'", "'ENCODE_FOR_URI'", "'BNODE'", 
		"'NOW'", "'UUID'", "'STRUUID'", "'RAND'", "'CONTAINS'", "'STRSTARTS'", 
		"'STRENDS'", "'STRBEFORE'", "'STRAFTER'", "'STRLANG'", "'STRDT'", "'SAMETERM'", 
		"'LANGMATCHES'", "'IF'", "'REGEX'", "'SUBSTR'", "'REPLACE'", "'BOUND'", 
		"'EXISTS'", "'NOT'", "'DISTINCT'", "'REDUCED'", null, "'*'", "'UNDEF'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "NOT", "DISTINCT", "REDUCED", "BOOL", "STAR", "UNDEF", 
		"TYPE", "COMMENT", "DURATION", "IRIREF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
		"VAR", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", 
		"DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", 
		"DOUBLE_NEGATIVE", "EXPONENT", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", 
		"STRING_LITERAL_LONG2", "BINARY_OPERATOR", "ECHAR", "NIL", "WS", "ANON", 
		"PN_CHARS_BASE", "PN_CHARS_U", "VARNAME", "PN_CHARS", "PN_PREFIX", "PN_LOCAL", 
		"PLX", "PERCENT", "HEX", "PN_LOCAL_ESC", "ANYCHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RSPQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RSPQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryUnitContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public QueryUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_queryUnit; }
	}

	public final QueryUnitContext queryUnit() throws RecognitionException {
		QueryUnitContext _localctx = new QueryUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_queryUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public PrologueContext prologue() {
			return getRuleContext(PrologueContext.class,0);
		}
		public SelectQueryContext selectQuery() {
			return getRuleContext(SelectQueryContext.class,0);
		}
		public ConstructQueryContext constructQuery() {
			return getRuleContext(ConstructQueryContext.class,0);
		}
		public DescribeQueryContext describeQuery() {
			return getRuleContext(DescribeQueryContext.class,0);
		}
		public AskQueryContext askQuery() {
			return getRuleContext(AskQueryContext.class,0);
		}
		public RegisterClauseContext registerClause() {
			return getRuleContext(RegisterClauseContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			prologue();
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(173);
				registerClause();
				}
			}

			setState(180);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				{
				setState(176);
				selectQuery();
				}
				break;
			case T__10:
				{
				setState(177);
				constructQuery();
				}
				break;
			case T__14:
				{
				setState(178);
				describeQuery();
				}
				break;
			case T__15:
				{
				setState(179);
				askQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologueContext extends ParserRuleContext {
		public List<BaseDeclContext> baseDecl() {
			return getRuleContexts(BaseDeclContext.class);
		}
		public BaseDeclContext baseDecl(int i) {
			return getRuleContext(BaseDeclContext.class,i);
		}
		public List<PrefixDeclContext> prefixDecl() {
			return getRuleContexts(PrefixDeclContext.class);
		}
		public PrefixDeclContext prefixDecl(int i) {
			return getRuleContext(PrefixDeclContext.class,i);
		}
		public PrologueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prologue; }
	}

	public final PrologueContext prologue() throws RecognitionException {
		PrologueContext _localctx = new PrologueContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_prologue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==T__1) {
				{
				setState(184);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(182);
					baseDecl();
					}
					break;
				case T__1:
					{
					setState(183);
					prefixDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseDeclContext extends ParserRuleContext {
		public TerminalNode IRIREF() { return getToken(RSPQLParser.IRIREF, 0); }
		public BaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseDecl; }
	}

	public final BaseDeclContext baseDecl() throws RecognitionException {
		BaseDeclContext _localctx = new BaseDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_baseDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(T__0);
			setState(190);
			match(IRIREF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixDeclContext extends ParserRuleContext {
		public TerminalNode PNAME_NS() { return getToken(RSPQLParser.PNAME_NS, 0); }
		public TerminalNode IRIREF() { return getToken(RSPQLParser.IRIREF, 0); }
		public PrefixDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixDecl; }
	}

	public final PrefixDeclContext prefixDecl() throws RecognitionException {
		PrefixDeclContext _localctx = new PrefixDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prefixDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(T__1);
			setState(193);
			match(PNAME_NS);
			setState(194);
			match(IRIREF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegisterClauseContext extends ParserRuleContext {
		public Token streamType;
		public IriContext outputStream;
		public IriContext iri() {
			return getRuleContext(IriContext.class,0);
		}
		public RegisterClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_registerClause; }
	}

	public final RegisterClauseContext registerClause() throws RecognitionException {
		RegisterClauseContext _localctx = new RegisterClauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_registerClause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(T__2);
			setState(197);
			((RegisterClauseContext)_localctx).streamType = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) ) {
				((RegisterClauseContext)_localctx).streamType = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(198);
			((RegisterClauseContext)_localctx).outputStream = iri();
			setState(199);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
